@@ -139,11 +139,24 @@ class DdlPsanaInterfaces ( object ) :
             print >>self.inc, T("namespace $top_pkg {")[self]
             print >>self.cpp, T("namespace $top_pkg {")[self]
 
-        # loop over packages in the model
-        for pkg in model.packages() :
-            if not pkg.included :
-                self._log.debug("parseTree: package=%s", repr(pkg))
-                self._parsePackage(pkg)
+        # enums for constants
+        for const in model.constants() :
+            if not const.included :
+                self._genConst(const)
+
+        # regular enums
+        for enum in model.enums() :
+            if not enum.included :
+                self._genEnum(enum)
+
+        # loop over packages and types in the model
+        for ns in model.namespaces() :
+            if isinstance(ns, Package) :
+                if not ns.included :
+                    self._parsePackage(ns)
+            elif isinstance(ns, Type) :
+                if not ns.external:
+                    self._parseType(type = ns)
 
         if self.top_pkg : 
             print >>self.inc, T("} // namespace $top_pkg")[self]
